# luna-static-anayzer

./: --outfile=lex.yy.cpp  .gitignore  .test.fa.swp  1.cpp  CMakeLists.txt  Makefile  a.out  analyze.sh  ast.hpp  ast_analyzer.cpp  ast_analyzer.hpp  ast_test.cpp  ast_tester.hpp  error_reporter.hpp  gmon.out  grammar.tab.cpp  grammar.tab.hpp  grammar.ypp  lex.yy.c  lex.yy.cpp  lexics.l  main.cpp  rts.80s-2255,ub.btr  rts.80s-4678,ub.btr  rts.80s-5929,ub.btr  test.cpp  test.fa~  test.sh
tests/: .t1.fa.swp  .test.fa.swo  .test.fa.swp  .test1.fa.swp  .test_no_keyword_as.fa.swp  .ucodes.cpp.swp  1  rts.80s-4171,ub.btr  test.fz~  test_ast.fa~  test_var_redecl.fa~  ucodes.cpp  ucodes.cpp~
